rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__coord__tests__east.snap
---
source: crates/rax-nmea/src/rules/coord.rs
expression: result
---
Ok(
    (
        Some(
            123.31871666666666,
        ),
        "rest",
    ),
)
