rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__coord__tests__empty.snap
---
source: crates/rax-nmea/src/rules/coord.rs
expression: result
---
Ok(
    (
        None,
        "bar",
    ),
)
