rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__coord__tests__invalid_number.snap
---
source: crates/rax-nmea/src/rules/coord.rs
expression: result
---
Err(
    RuleError {
        reason: "invalid coord string: 'abc123.456'",
    },
)
