rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__coord__tests__invalid_sign.snap
---
source: crates/rax-nmea/src/rules/coord.rs
expression: result
---
Err(
    RuleError {
        reason: "invalid sign string: 'X'",
    },
)
