rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__coord__tests__missing_comma.snap
---
source: crates/rax-nmea/src/rules/coord.rs
expression: result
---
Err(
    RuleError {
        reason: "Missing number string.",
    },
)
