rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__coord__tests__south.snap
---
source: crates/rax-nmea/src/rules/coord.rs
expression: result
---
Ok(
    (
        Some(
            -48.11729999999999,
        ),
        "xyz",
    ),
)
